--- a/climate-2.ipynb
+++ b/climate-2.ipynb
@@ -266,36 +266,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(62.0, 69.57142857142857, 74.0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This function called `calc_temps` will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
-    "def calc_temps(start_date, end_date):\n",
-    "    \"\"\"TMIN, TAVG, and TMAX for a list of dates.\n",
-    "    \n",
-    "    Args:\n",
-    "        start_date (string): A date string in the format %Y-%m-%d\n",
-    "        end_date (string): A date string in the format %Y-%m-%d\n",
-    "        \n",
-    "    Returns:\n",
-    "        TMIN, TAVE, and TMAX\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    return session.query(func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)).\\\n",
-    "        filter(Measurement.date >= start_date).filter(Measurement.date <= end_date).all()\n",
-    "\n",
-    "# function usage example\n",
-    "print(calc_temps('2012-02-28', '2012-03-05'))"
+    "# and return the minimum, average, and maximum temperatures for that range of dates\n"
    ]
   },
   {
@@ -333,39 +309,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(62.0, 69.15384615384616, 77.0)]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Create a query that will calculate the daily normals \n",
-    "# (i.e. the averages for tmin, tmax, and tavg for all historic data matching a specific month and day)\n",
-    "\n",
-    "def daily_normals(date):\n",
-    "    \"\"\"Daily Normals.\n",
-    "    \n",
-    "    Args:\n",
-    "        date (str): A date string in the format '%m-%d'\n",
-    "        \n",
-    "    Returns:\n",
-    "        A list of tuples containing the daily normals, tmin, tavg, and tmax\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    sel = [func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)]\n",
-    "    return session.query(*sel).filter(func.strftime(\"%m-%d\", Measurement.date) == date).all()\n",
-    "    \n",
-    "daily_normals(\"01-01\")"
+    "# ily_normals(\"01-01\")"
    ]
   },
   {
